--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 
 <body>
 
-sample text
-<div id="wrapper">
-	<div id="mainContain">
-
+	<div id="button">
+		<button id="reset" name="reset">New Sketch</button>
 	</div>
-</div>
+
+	<div id="wrapper">
+		<div id="mainContain"></div>
+	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
